--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.comment {
+  border-top: 1px solid gray;
+  padding: 1em 1em 1em 1em;
+}
+
+.comments {
+  margin-top: 2em;
+}
