--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,17 +1,12 @@
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for([@post, @post.comments.build]) do |f| %>
-    <li>
-      <%= f.label :commenter %>
-      <%= f.text_field :commenter, class: "form-control" %>
-    </li>
-    <li>
-      <%= f.label :content %>
-      <%= f.text_field :content, class: "form-control" %>
-    </li>
-    <li>
-      <%= f.submit "Create Comment", class: "btn btn-primary" %>
-    </li>
-  <% end %>
-  </div>
-</div>
+
+<%= form_for([@post, @comment]) do |f| %>
+  <%= render 'shared/error_messages', object: f.object %>
+  <li>
+    <%= f.label :comment %>
+    <%= f.text_area :content, class: "form-control" %>
+  </li>
+  <li>
+    <%= f.submit "Create Comment", class: "btn btn-primary" %>
+  </li>
+<% end %>
+
