--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,14 +1,13 @@
 <div class="comment">
   <p>
-  <strong>Commenter:</strong>
-  <% unless comment.commenter = "" %>
+  <% if comment.commenter %>
     <%= comment.commenter %>
   <% else %>
-      Anonymous
+    Anonymous
   <% end %>
   </p>
   <p>
-  <strong>Content:</strong>
+  <strong>Comment:</strong>
   <%= comment.content %>
   </p>
 </div>
