--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,8 @@
 <header class="navbar navbar-default">
   <div class="container">
     <%= link_to "ReChan", root_path, class: "navbar-brand" %>
+    <ul class="nav navbar-nav navbar-right">
+      <li><%= link_to "Sign up", new_user_path %></li>
+    </ul>
   </div>
 </header>
