Added login after signup

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,5 @@
 <div class="comment">
-  <p>
-  <% if comment.commenter %>
-    <%= comment.commenter %>
-  <% else %>
-    Anonymous
-  <% end %>
-  </p>
+  <p><%= commenter_name comment %></p>
   <p>
   <strong>Comment:</strong>
   <%= comment.content %>
