Improve comment and add simple user page

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,11 @@
 <div class="comment">
-  <p><%= commenter_name comment %></p>
+  <p>
+    <% if comment.user %>
+      <%= link_to comment.commenter, user_path(comment.user) %>
+    <% else %>
+      Anonymous
+    <% end %>
+  </p>
   <p>
   <strong>Comment:</strong>
   <%= comment.content %>
