--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,7 +3,7 @@
   <%= render 'shared/error_messages', object: f.object %>
   <li>
     <% if current_user %>
-      <%= f.hidden_field :commenter, :value => current_user.user_name %>
+      <%= f.hidden_field :user_id, :value => current_user.id %>
     <% end %>
   </li>
   <li>
