--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,7 @@
     <%= link_to "ReChan", root_path, class: "navbar-brand" %>
     <ul class="nav navbar-nav navbar-right">
       <% if current_user %>
+        <li><%= link_to current_user.user_name, user_path(current_user) %></li>
         <li><%= link_to "Log out", logout_path, method: "delete" %></li>
       <% else %>
         <li><%= link_to "Sign up", new_user_path %></li>
