--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,12 @@
 <div class="container">
   <div class="col-md-6 col-md-offset-3">
-    <p>
+    <p class="post">
+      <h3><%= @post.title %></h3>
+      <% if @post.user %>
+        <%= link_to @post.user.user_name, user_path(@post.user) %>
+      <% else %>
+        Anonymous
+      <% end %>
       <%= @post.content %>
     </p>
     <div class="comments-form">
