Added links to posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,12 @@
     <ul>
       <% @posts.each do |post| %>
           <li class="post">
-            <%= link_to post.title, post_path(post) %>
+            <% if post.link? %>
+              <%= link_to post.title, post.link %>
+            <% else %>
+              <%= link_to post.title, post_path(post) %>
+            <% end %>
+            <br><%= link_to "Comments (#{post.comments.count})", post_path(post), class: "comments-link" %>
           </li>
       <% end %>
     </ul>
