--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,25 +1,66 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <ul>
-      <%= form_for(@post) do |f| %>
-        <%= render 'shared/error_messages', object: f.object %>
-        <li>
-          <% if current_user %>
-            <%= f.hidden_field :user_id, :value => current_user.id %>
-          <% end %>
-        </li>
-        <li>
-          <%= f.label :title %>
-          <%= f.text_field :title, class: "form-control" %>
-        </li>
-        <li>
-          <%= f.label :content %>
-          <%= f.text_field :content, class: "form-control" %>
-        </li>
-        <li>
-          <%= f.submit "Create Post", class: "btn btn-primary" %>
-        </li>
-      <% end %>
+
+    <ul class="nav nav-tabs">
+      <li class="active"><a href="#text-post" data-toggle="tab">Text Post</a></li>
+      <li><a href="#link-post" data-toggle="tab">Link Post</a></li>
     </ul>
+
+    <div class="tab-content">
+
+      <div class="tab-pane active" id="text-post">
+        <ul>
+          <%= form_for(@post) do |f| %>
+            <%= render 'shared/error_messages', object: f.object %>
+            <li>
+              <% if current_user %>
+                <%= f.hidden_field :user_id, :value => current_user.id %>
+              <% end %>
+            </li>
+            <li>
+              <%= f.label :title %>
+              <%= f.text_field :title, class: "form-control" %>
+            </li>
+            <li>
+              <%= f.label :content %>
+              <%= f.text_field :content, class: "form-control" %>
+            </li>
+            <li>
+              <%= f.submit "Create Post", class: "btn btn-primary" %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+
+      <div class="tab-pane" id="link-post">
+        <ul>
+          <%= form_for(@post) do |f| %>
+            <%= render 'shared/error_messages', object: f.object %>
+            <li>
+              <% if current_user %>
+                <%= f.hidden_field :user_id, :value => current_user.id %>
+              <% end %>
+            </li>
+            <li>
+              <%= f.label :title %>
+              <%= f.text_field :title, class: "form-control" %>
+            </li>
+            <li>
+              <%= f.label :link %>
+              <%= f.text_field :link, class: "form-control" %>
+            </li>
+            <li>
+              <%= f.label :content %>
+              <%= f.text_field :content, class: "form-control" %>
+            </li>
+            <li>
+              <%= f.submit "Create Post", class: "btn btn-primary" %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+
+    </div>
+
   </div>
 </div>
