--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,11 @@
 <div class="container">
   <div class="col-md-6 col-md-offset-3">
     <p class="post">
+    <% if @post.link? %>
+      <h3><a href=<%= @post.link %>><%= @post.title %></a></h3>
+    <% else %>
       <h3><%= @post.title %></h3>
+    <% end %>
       <% if @post.user %>
         <%= link_to @post.user.display_name, user_path(@post.user) %>
       <% else %>
