--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -10,4 +10,7 @@
   <strong>Comment:</strong>
   <%= comment.content %>
   </p>
+  <% if current_user?(comment.user) %>
+    <%= link_to "delete", [comment.post, comment], method: :delete %>
+  <% end %>
 </div>
