--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,5 @@
 <div class="col-md-8 col-md-offset-1">
-  <ul>
-    <% @posts.each do |post| %>
-        <li class="post">
-          <% if post.link? %>
-            <%= link_to post.title, post.link %>
-          <% else %>
-            <%= link_to post.title, post_path(post) %>
-          <% end %>
-          <br><%= link_to "Comments (#{post.comments.count})", post_path(post), class: "comments-link" %>
-        </li>
-    <% end %>
-  </ul>
+  <%= render 'shared/posts' %>
 </div>
 <div class="col-md-3">
   <%= link_to "Create a post", new_post_path, class: "btn btn-default" %> 
