--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-6 col-md-offset-3">
   <p class="post">
-    <h3><%= link_to @post.title, @post.linker, class: "#{@post.type}-title" %></h3>
+    <h3><%= link_to_post(@post) %></h3>
     <% if current_user?(@post.user) %>
       <div class="delete-link"><%= link_to "delete", @post, method: :delete %></div>
     <% end %>
