--- a/app/views/shared/_posts.html.erb
+++ b/app/views/shared/_posts.html.erb
@@ -1,5 +1,10 @@
 <ul>
   <% @posts.each do |post| %>
+    <% if current_user && !post.bumped_users.include?(current_user) %>
+      <%= render "user_item_bumps/bump_form", post: post %>
+    <% elsif current_user %>
+      <%= render "user_item_bumps/debump_form", post: post %>
+    <% end %>
       <li class="post">
       <%= link_to_post(post) %>
         <% if current_user?(post.user) %>
