--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,10 @@
 <%= form_for([@post, @comment]) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
+
+    <% if current_user %>
+      <%= f.hidden_field :user_id, value: current_user.id %>
+    <% end %>
+
     <%= f.label :comment %>
     <%= f.text_area :content, class: "form-control" %>
 
