--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -11,6 +11,10 @@
       <%= form_for(@post) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
 
+        <% if current_user %>
+          <%= f.hidden_field :user_id, value: current_user.id %>
+        <% end %>
+
         <%= f.label :title %>
         <%= f.text_field :title, class: "form-control" %>
 
@@ -24,6 +28,10 @@
     <div class="tab-pane" id="link-post">
       <%= form_for(@post) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
+
+        <% if current_user %>
+          <%= f.hidden_field :user_id, value: current_user.id %>
+        <% end %>
 
         <%= f.label :title %>
         <%= f.text_field :title, class: "form-control" %>
