--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,24 @@
 <div class="col-md-6 col-md-offset-3">
-  <%= form_for(@user) do |f| %>
+  <%= form_for(@user, html: { id: "newuserform" }) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
-    <%= f.label :user_name %>
-    <%= f.text_field :user_name, class: "form-control" %>
 
-    <%= f.label :password %>
-    <%= f.password_field :password, class: "form-control" %>
+    <div class="form-group">
+      <%= f.label "Username", class: "control-label" %>
+      <%= f.text_field :user_name, class: "form-control" %>
+      <i></i>
+    </div>
 
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, class: "form-control" %>
+    <div class="form-group">
+      <%= f.label :password, class: "control-label" %>
+      <%= f.password_field :password, id: "password", class: "form-control" %>
+      <i></i>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password_confirmation, class: "control-label" %>
+      <%= f.password_field :password_confirmation, class: "form-control" %>
+      <i></i>
+    </div>
 
     <%= f.submit "Create User", class: "btn btn-primary" %>
   <% end %>
