--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,8 +1,10 @@
-<%= form_for([@post, @comment]) do |f| %>
+<%= form_for([@post, @comment], html: { id: "commentform" }) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
+  <div class="form-group">
     <%= f.label :comment %>
     <%= f.text_area :content, class: "form-control" %>
+  </div>
 
     <%= f.submit "Create Comment", class: "btn btn-primary" %>
 <% end %>
