--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -8,31 +8,44 @@
   <div class="tab-content">
 
     <div class="tab-pane active" id="text-post">
-      <%= form_for(@post) do |f| %>
+      <%= form_for(@post, html: { id: "postform" }) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
 
-        <%= f.label :title %>
-        <%= f.text_field :title, class: "form-control" %>
+        <div class="form-group">
+          <%= f.label :title, class: "control-label" %>
+          <%= f.text_field :title, class: "form-control" %>
+          <i></i>
+        </div>
 
-        <%= f.label :content %>
-        <%= f.text_field :content, class: "form-control" %>
+        <div class="form-group">
+          <%= f.label :content, class: "control-label" %>
+          <%= f.text_area :content, class: "form-control" %>
+        </div>
 
         <%= f.submit "Create Post", class: "btn btn-primary" %>
     <% end %>
     </div>
 
     <div class="tab-pane" id="link-post">
-      <%= form_for(@post) do |f| %>
+      <%= form_for(@post, html: { id: "linkpostform" }) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
 
-        <%= f.label :title %>
-        <%= f.text_field :title, class: "form-control" %>
+        <div class="form-group">
+          <%= f.label :title, class: "control-label" %>
+          <%= f.text_field :title, class: "form-control" %>
+          <i></i>
+        </div>
 
-        <%= f.label :link %>
-        <%= f.text_field :link, class: "form-control" %>
+        <div class="form-group">
+          <%= f.label :link, class: "control-label" %>
+          <%= f.text_field :link, class: "form-control" %>
+          <i></i>
+        </div>
 
-        <%= f.label :content %>
-        <%= f.text_field :content, class: "form-control" %>
+        <div class="form-group">
+          <%= f.label :content, class: "control-label" %>
+          <%= f.text_area :content, class: "form-control" %>
+        </div>
 
         <%= f.submit "Create Post", class: "btn btn-primary" %>
     <% end %>
